test/integration/bad/data_index/stanc.expected
  $ ../../../../../install/default/bin/stanc non_data_index1.stan

Semantic error in 'non_data_index1.stan', line 6, column 2 to column 18:
   -------------------------------------------------
     4:  }
     5:  transformed parameters {
     6:    real z[size(y)];
           ^
     7:  }
   -------------------------------------------------

Non-data variables are not allowed in top level size declarations.

  $ ../../../../../install/default/bin/stanc non_data_index10.stan

Semantic error in 'non_data_index10.stan', line 6, column 2 to column 33:
   -------------------------------------------------
     4:  }
     5:  transformed parameters {
     6:    cholesky_factor_cov[size(y)] z;
           ^
     7:  }
   -------------------------------------------------

Non-data variables are not allowed in top level size declarations.

  $ ../../../../../install/default/bin/stanc non_data_index11.stan

Semantic error in 'non_data_index11.stan', line 6, column 2 to column 36:
   -------------------------------------------------
     4:  }
     5:  transformed parameters {
     6:    cholesky_factor_cov[3, size(y)] z;
           ^
     7:  }
   -------------------------------------------------

Non-data variables are not allowed in top level size declarations.

  $ ../../../../../install/default/bin/stanc non_data_index12.stan

Semantic error in 'non_data_index12.stan', line 6, column 2 to column 34:
   -------------------------------------------------
     4:  }
     5:  transformed parameters {
     6:    cholesky_factor_corr[size(y)] z;
           ^
     7:  }
   -------------------------------------------------

Non-data variables are not allowed in top level size declarations.

  $ ../../../../../install/default/bin/stanc non_data_index13.stan

Semantic error in 'non_data_index13.stan', line 6, column 2 to column 25:
   -------------------------------------------------
     4:  }
     5:  transformed parameters {
     6:    corr_matrix[size(y)] z;
           ^
     7:  }
   -------------------------------------------------

Non-data variables are not allowed in top level size declarations.

  $ ../../../../../install/default/bin/stanc non_data_index14.stan

Semantic error in 'non_data_index14.stan', line 6, column 2 to column 24:
   -------------------------------------------------
     4:  }
     5:  transformed parameters {
     6:    cov_matrix[size(y)] z;
           ^
     7:  }
   -------------------------------------------------

Non-data variables are not allowed in top level size declarations.

  $ ../../../../../install/default/bin/stanc non_data_index2.stan

Semantic error in 'non_data_index2.stan', line 6, column 2 to column 20:
   -------------------------------------------------
     4:  }
     5:  transformed parameters {
     6:    vector[size(y)] z;
           ^
     7:  }
   -------------------------------------------------

Non-data variables are not allowed in top level size declarations.

  $ ../../../../../install/default/bin/stanc non_data_index3.stan

Semantic error in 'non_data_index3.stan', line 6, column 2 to column 24:
   -------------------------------------------------
     4:  }
     5:  transformed parameters {
     6:    row_vector[size(y)] z;
           ^
     7:  }
   -------------------------------------------------

Non-data variables are not allowed in top level size declarations.

  $ ../../../../../install/default/bin/stanc non_data_index4.stan

Semantic error in 'non_data_index4.stan', line 5, column 2 to column 23:
   -------------------------------------------------
     3:  }
     4:  transformed parameters {
     5:    matrix[size(y), 2] m;
           ^
     6:  }
   -------------------------------------------------

Non-data variables are not allowed in top level size declarations.

  $ ../../../../../install/default/bin/stanc non_data_index5.stan

Semantic error in 'non_data_index5.stan', line 6, column 2 to column 23:
   -------------------------------------------------
     4:  }
     5:  transformed parameters {
     6:    matrix[2, size(y)] m;
           ^
     7:  
     8:  }
   -------------------------------------------------

Non-data variables are not allowed in top level size declarations.

  $ ../../../../../install/default/bin/stanc non_data_index6.stan

Semantic error in 'non_data_index6.stan', line 6, column 2 to column 21:
   -------------------------------------------------
     4:  }
     5:  transformed parameters {
     6:    simplex[size(y)] z;
           ^
     7:  }
   -------------------------------------------------

Non-data variables are not allowed in top level size declarations.

  $ ../../../../../install/default/bin/stanc non_data_index7.stan

Semantic error in 'non_data_index7.stan', line 6, column 2 to column 21:
   -------------------------------------------------
     4:  }
     5:  transformed parameters {
     6:    ordered[size(y)] z;
           ^
     7:  }
   -------------------------------------------------

Non-data variables are not allowed in top level size declarations.

  $ ../../../../../install/default/bin/stanc non_data_index8.stan

Semantic error in 'non_data_index8.stan', line 6, column 2 to column 30:
   -------------------------------------------------
     4:  }
     5:  transformed parameters {
     6:    positive_ordered[size(y)] z;
           ^
     7:  }
   -------------------------------------------------

Non-data variables are not allowed in top level size declarations.

  $ ../../../../../install/default/bin/stanc non_data_index9.stan

Semantic error in 'non_data_index9.stan', line 6, column 2 to column 25:
   -------------------------------------------------
     4:  }
     5:  transformed parameters {
     6:    unit_vector[size(y)] z;
           ^
     7:  }
   -------------------------------------------------

Non-data variables are not allowed in top level size declarations.

